Fixed axis alignment.

--- a/peras-dashboard/view.css
+++ b/peras-dashboard/view.css
@@ -51,7 +51,7 @@ table {
 
 th, td {
   border: 1px solid black;
-  padding: 8px;
+  padding: 1px;
 }
 
 th {
